Adds support for `cmgr` and `cmgrd` to use the schema API
